--- a/Go/Documentación/13.Redes &Comunicación.md
+++ b/Go/Documentación/13.Redes &Comunicación.md
@@ -380,3 +380,21 @@ WebSocket permite la comunicación bidireccional en tiempo real entre cliente y 
   }
 
   ```
+
+---
+
+## 13.5. GraphQL
+
+GraphQL es un lenguaje de consulta que permite a los clientes solicitar solo los datos que necesitan de un servidor. A diferencia de las APIs REST tradicionales, donde cada endpoint suele devolver un conjunto fijo de datos, GraphQL permite a los clientes especificar la estructura exacta de los datos que desean recibir.
+
+```graphql
+type Query {
+  user(id: ID!): User
+}
+
+type User {
+  id: ID!
+  name: String
+  email: String
+}
+```
