--- a/Go/Documentación/5.EstructurasDatos.md
+++ b/Go/Documentación/5.EstructurasDatos.md
@@ -309,6 +309,10 @@ Un árbol es una estructura de datos jerárquica que consiste en nodos conectado
 
   Un árbol rojo-negro es otro tipo de árbol binario auto-balanceado.
 
+- ### Árboles K-D (K-Dimensional Trees)
+
+  Los árboles K-D son estructuras de datos utilizadas para almacenar puntos en un espacio K-dimensional y facilitar la búsqueda rápida en ese espacio. Son una extensión de los árboles de búsqueda binaria, adaptados para manejar datos en múltiples dimensiones.
+
 ## 5.10. Grafos
 
 Los grafos consisten en nodos y aristas y pueden ser dirigidos o no dirigidos.
