--- a/SQL/Documentación/10.NormalizacionSQL.md
+++ b/SQL/Documentación/10.NormalizacionSQL.md
@@ -127,6 +127,8 @@ La habilidad y el proyecto son atributos multivalor. Para cumplir con 4NF, debem
 | 1           | Proyecto A |
 | 1           | Proyecto B |
 
+---
+
 ## 2. Ventajas de la Normalización
 
 - **Eliminación de Redundancia**: Al dividir los datos en tablas más pequeñas, se evita la duplicación innecesaria de información.
@@ -134,8 +136,33 @@ La habilidad y el proyecto son atributos multivalor. Para cumplir con 4NF, debem
 - **Facilidad de Mantenimiento**: Es más fácil realizar modificaciones o actualizaciones cuando los datos están organizados y distribuidos correctamente.
 - **Mejora de la Integridad de los Datos**: Asegura que los datos estén correctos y completos, y evita errores de inserción o actualización.
 
+---
+
 ## 3. Desventajas de la Normalización
 
 - **Complejidad de Consultas**: Las consultas SQL pueden volverse más complejas debido a la necesidad de unir varias tablas.
 - **Rendimiento**: Aunque la normalización mejora la integridad de los datos, puede afectar el rendimiento en bases de datos grandes debido a la gran cantidad de uniones necesarias.
 - **Desnormalización Necesaria**: A veces, la desnormalización (reintroducción de redundancia) puede ser necesaria para mejorar el rendimiento en sistemas de gran escala.
+
+---
+
+## 4. Resumen de las Formas Normales
+
+| Forma Normal | Requisitos                                                                                |
+| ------------ | ----------------------------------------------------------------------------------------- |
+| **1NF**      | Elimina duplicados y asegura que los valores de cada columna son atómicos.                |
+| **2NF**      | Elimina dependencias parciales de la clave primaria.                                      |
+| **3NF**      | Elimina dependencias transitivas entre atributos no clave.                                |
+| **4NF**      | Elimina dependencias multivaluadas.                                                       |
+| **5NF**      | Elimina dependencias de unión, donde las relaciones dependen de la combinación de claves. |
+
+---
+
+## 5. Cómo Diseñar una Base de Datos Normalizada
+
+Para diseñar una base de datos normalizada:
+
+1. **Identifica las entidades principales:** Determina las tablas clave que necesitas, como clientes, productos, órdenes, etc.
+2. **Define las relaciones entre entidades:** Define las claves primarias y foráneas para vincular las tablas.
+3. **Aplica las formas normales:** Comienza por aplicar la 1NF y luego continúa con las formas siguientes hasta que logres un diseño que elimine las redundancias y dependencias no deseadas.
+4. **Revisa el diseño:** Asegúrate de que las consultas clave sean eficientes. Si es necesario, considera una denormalización parcial para optimizar el rendimiento.
