--- a/Python/Documentación/5.EstructurasDatos.md
+++ b/Python/Documentación/5.EstructurasDatos.md
@@ -252,6 +252,10 @@ Los conjuntos son colecciones desordenadas de elementos únicos.
   s = set([5, 4, 6, 8, 8, 1])
   print(s)       #{1, 4, 5, 6, 8}
 
+  s1 = set([1, 2, 3])
+  s2 = set([3, 4, 5])
+  print(s1 | s2) #{1, 2, 3, 4, 5} # Se puede unir sets usando |
+
   ```
 
 - ### Operaciones con conjuntos
