--- a/Go/Documentación/1.Sintaxis&Variables.md
+++ b/Go/Documentación/1.Sintaxis&Variables.md
@@ -293,7 +293,136 @@ Argumento 1: argumento1
 
 ---
 
-## 1.8. Comandos Básicos Go
+## 1.8. CLI en Go
+
+CLI son las siglas de Command Line Interface, que en español significa Interfaz de Línea de Comandos. Es una forma de interactuar con un sistema operativo o una aplicación escribiendo comandos de texto en una terminal.
+
+Crear una CLI (Command-Line Interface) en Go es una tarea común y sencilla de implementar gracias a las capacidades nativas del lenguaje y a diversas bibliotecas que facilitan el desarrollo de aplicaciones CLI. Una de las bibliotecas más populares para crear CLI en Go es Cobra.
+
+### Opción 1: CLI sencilla sin bibliotecas
+
+Primero, te muestro cómo crear una CLI básica en Go sin necesidad de usar ninguna biblioteca externa.
+
+```go
+package main
+
+import (
+ "flag"
+ "fmt"
+)
+
+func main() {
+ // Definir los flags (opciones de la CLI)
+ name := flag.String("name", "Mundo", "Especifica el nombre a saludar")
+ age := flag.Int("age", 0, "Especifica la edad")
+
+ // Parsear los flags
+ flag.Parse()
+
+ // Usar los valores de los flags
+ fmt.Printf("Hola, %s! Tienes %d años.\n", *name, *age)
+}
+
+```
+
+- **`flag.String`**: Define un `flag` de tipo `string` (en este caso, --name).
+- **`flag.Int`**: Define un `flag` de tipo `int` (--age).
+- **`flag.Parse()`**: Esta función es la encargada de leer los argumentos pasados desde la línea de comandos.
+- **Uso**: Cuando ejecutas el programa desde la terminal, puedes pasarle opciones:
+
+  ```bash
+  go run main.go --name=Juan --age=30
+
+  ```
+
+### Opción 2: CLI con Cobra
+
+Si necesitas una CLI más avanzada con subcomandos y mayor flexibilidad, Cobra es una excelente opción. Cobra es ampliamente utilizada, incluyendo en la CLI de Kubernetes.
+
+- **Instala la biblioteca Cobra:**
+
+  ```bash
+  go get -u github.com/spf13/cobra@latest
+
+  ```
+
+- **Desarrollo de CLI:**
+
+  ```go
+  package main
+
+  import (
+  "fmt"
+  "github.com/spf13/cobra"
+  "os"
+  )
+
+  func main() {
+  // Crear el comando raíz
+  var rootCmd = &cobra.Command{
+    Use:   "greet",
+    Short: "Greet es una CLI de ejemplo",
+    Long:  `Una aplicación CLI en Go creada con Cobra para saludar a las personas.`,
+  }
+
+  // Subcomando "hello"
+  var helloCmd = &cobra.Command{
+    Use:   "hello",
+    Short: "Saludar a alguien",
+    Run: func(cmd *cobra.Command, args []string) {
+    if len(args) > 0 {
+      fmt.Printf("Hola, %s!\n", args[0])
+    } else {
+      fmt.Println("Hola!")
+    }
+    },
+  }
+
+  // Subcomando "goodbye"
+  var goodbyeCmd = &cobra.Command{
+    Use:   "goodbye",
+    Short: "Despedirse de alguien",
+    Run: func(cmd *cobra.Command, args []string) {
+    if len(args) > 0 {
+      fmt.Printf("Adiós, %s!\n", args[0])
+    } else {
+      fmt.Println("Adiós!")
+    }
+    },
+  }
+
+  // Agregar los subcomandos al comando raíz
+  rootCmd.AddCommand(helloCmd)
+  rootCmd.AddCommand(goodbyeCmd)
+
+  // Ejecutar la CLI
+  if err := rootCmd.Execute(); err != nil {
+    fmt.Println(err)
+    os.Exit(1)
+  }
+  }
+
+  ```
+
+  - **`rootCmd`**: Es el comando raíz de la CLI, que en este caso es greet.
+  - **Subcomandos**: Definimos dos subcomandos:
+  - **hello**: Para saludar.
+  - **goodbye**: Para despedirse.
+  - **`AddCommand`**: Añadimos los subcomandos al comando raíz con `rootCmd.AddCommand(helloCmd)` y `rootCmd.AddCommand(goodbyeCmd)`.
+  - **Uso**: Puedes ejecutar la CLI y usar los subcomandos
+
+    ```bash
+    go run main.go hello Juan
+    # Salida: Hola, Juan!
+
+    go run main.go goodbye Maria
+    # Salida: Adiós, Maria!
+
+    ```
+
+---
+
+## 1.9. Comandos Básicos Go
 
 - `go run`: Compila y ejecuta el programa.
 - `go build`: Compila el código fuente y genera un binario.
