--- a/Go/Documentación/4.Funciones&Procedimientos.md
+++ b/Go/Documentación/4.Funciones&Procedimientos.md
@@ -294,7 +294,7 @@ func main() {
 
 ---
 
-## 4.11. Iteradores e Iterables
+## 4.11. Iteradores Iterables
 
 - ### Iterables
 
@@ -303,3 +303,47 @@ func main() {
 - ### Iteradores
 
   Es un objeto que proporciona una forma de acceder secuencialmente a los elementos de un iterable. En Go, no tenemos iteradores en el sentido estricto de otros lenguajes, pero podemos simular su comportamiento.
+
+---
+
+## 4.12. Decoradores
+
+En Go, no existen decoradores de la misma manera que en lenguajes como Python, donde puedes usar una sintaxis especial (@decorator) para modificar el comportamiento de funciones o métodos.
+
+Sin embargo, se puede lograr un comportamiento similar utilizando funciones de orden superior. Esto significa que puedes pasar funciones como parámetros y devolver nuevas funciones que añadan comportamiento adicional, logrando efectos parecidos a los decoradores.
+
+```go
+package main
+
+import (
+ "fmt"
+ "time"
+)
+
+// Función decoradora que mide el tiempo de ejecución
+func timeTrack(fn func()) func() {
+ return func() {
+  start := time.Now()
+  fn()
+  fmt.Printf("Tiempo de ejecución: %s\n", time.Since(start))
+ }
+}
+
+// Función original
+func myFunction() {
+ time.Sleep(2 * time.Second) // Simulamos un trabajo costoso
+ fmt.Println("Ejecutando mi función")
+}
+
+func main() {
+ // Aplicamos el decorador
+ decoratedFunction := timeTrack(myFunction)
+ // Llamamos a la función decorada
+ decoratedFunction()
+}
+
+```
+
+- Función decoradora `timeTrack(fn func()) func()`: Recibe una función como parámetro (fn) y devuelve una nueva función que mide el tiempo de ejecución de la función original.
+- myFunction(): Es la función que se decorará. En este caso, simplemente simula una operación costosa con `time.Sleep(2 * time.Second)`.
+- Aplicación del decorador: La función `timeTrack` envuelve a myFunction y mide el tiempo que tarda en ejecutarse.
