--- a/Python/Documentación/1.Sintaxis&Variables.md
+++ b/Python/Documentación/1.Sintaxis&Variables.md
@@ -257,7 +257,82 @@ En Python, los argumentos de línea de comandos se acceden a través del módulo
 
 ---
 
-## 1.8 Comandos Básicos Python
+## 1.8. CLI en Python
+
+Para crear una CLI (Command-Line Interface) en Python, existen varias formas, desde usar bibliotecas estándar como argparse hasta herramientas más avanzadas como Click o Typer. A continuación, te muestro tres formas comunes para implementar CLI en Python.
+
+### Opción 1: CLI básica con argparse (biblioteca estándar)
+
+Python tiene una biblioteca incorporada llamada `argparse` que permite definir argumentos y opciones para una CLI de manera sencilla.
+
+```py
+import argparse
+
+def main():
+    parser = argparse.ArgumentParser(description="Una CLI de ejemplo")
+
+    # Definir los argumentos de la CLI
+    parser.add_argument("--name", type=str, help="El nombre de la persona a saludar", default="Mundo")
+    parser.add_argument("--age", type=int, help="La edad de la persona", default=0)
+
+    # Parsear los argumentos
+    args = parser.parse_args()
+
+    # Usar los argumentos
+    print(f"Hola, {args.name}! Tienes {args.age} años.")
+
+if __name__ == "__main__":
+    main()
+
+```
+
+- **`ArgumentParser`**: Define un nuevo objeto para gestionar los argumentos.
+- **`add_argument`**: Permite agregar argumentos opcionales o posicionales, en este caso --name y --age.
+- **`args = parser.parse_args()`**: Parseamos los argumentos pasados por línea de comandos.
+- **Uso**: Puedes ejecutar el programa desde la terminal
+
+  ```py
+  python cli.py --name Juan --age 30
+
+  ```
+
+### Opción 2: CLI con Typer
+
+Typer es una biblioteca relativamente nueva que se basa en Click, pero utiliza anotaciones de tipos de Python para hacer que la sintaxis sea más simple y eficiente. Es ideal para quienes usan Python 3.6+ y quieren crear CLI de forma rápida y clara.
+
+- **Instala la biblioteca Typer con pip:**
+
+  ```bash
+  pip install typer
+
+  ```
+
+- **Desarrollo CLI:**
+
+  ```PY
+  import typer
+
+  def greet(name: str = "Mundo", age: int = 0):
+      """Saluda a la persona con su nombre y edad."""
+      print(f"Hola, {name}! Tienes {age} años.")
+
+  if __name__ == "__main__":
+      typer.run(greet)
+
+  ```
+
+  - **Anotaciones de tipos**: name: str y age: int permiten a Typer inferir automáticamente los tipos de datos y generar la interfaz CLI.
+  - **`typer.run()`**: Se usa para ejecutar la función como un comando de la CLI.
+  - **Uso**: Puedes ejecutar la CLI:
+
+    ```bash
+    python cli.py --name Juan --age 30
+
+    ```
+
+---
+
+## 1.9. Comandos Básicos Python
 
 - `python script.py`: Ejecuta el script Python.
 - `python -m py_compile script.py`: Compila el script Python a bytecode.
