--- a/Python/Documentación/4.Funciones&Procedimientos.md
+++ b/Python/Documentación/4.Funciones&Procedimientos.md
@@ -279,3 +279,187 @@ def main():
       print(f"Índice {indice}: {fruta}")
 
   ```
+
+---
+
+## 4.12. Decoradores
+
+Los decoradores en Python son funciones que permiten modificar o mejorar el comportamiento de otras funciones o métodos sin cambiar su código original. Son una de las características más potentes y flexibles de Python.
+
+Un decorador es simplemente una función que recibe una función como argumento y devuelve una nueva función. Se suelen usar para añadir funcionalidades comunes, como validaciones, registro de acciones, manejo de excepciones, entre otros.
+
+### Sintaxis básica de un decorador
+
+Un decorador se define como una función que recibe otra función como argumento y devuelve una nueva función. Se utiliza la sintaxis especial @decorator_name antes de la definición de una función para aplicar el decorador.
+
+```py
+def mi_decorador(func):
+    def nueva_funcion(*args, **kwargs):
+        print("Antes de ejecutar la función")
+        resultado = func(*args, **kwargs)
+        print("Después de ejecutar la función")
+        return resultado
+    return nueva_funcion
+
+# Aplicar el decorador
+@mi_decorador
+def saludar():
+    print("Hola, mundo!")
+
+saludar()
+
+# Salida:
+
+# Antes de ejecutar la función
+# Hola, mundo!
+# Después de ejecutar la función
+
+```
+
+- **`mi_decorador`**: Es el decorador que recibe la función saludar como argumento.
+- **nueva_funcion**: Esta función envuelve a saludar y añade mensajes antes y después de su ejecución.
+- Al usar `@mi_decorador` justo encima de la definición de `saludar()`, aplicamos el decorador a la función.
+
+### Uso de decoradores con argumentos en las funciones
+
+Si la función original tiene argumentos, el decorador también debe ser capaz de manejarlos. Esto se logra con `*args` y `**kwargs`, que permiten que la función envuelta acepte cualquier número de argumentos y palabras clave.
+
+```py
+def mi_decorador(func):
+    def nueva_funcion(*args, **kwargs):
+        print("Llamada con argumentos:", args, kwargs)
+        resultado = func(*args, **kwargs)
+        return resultado
+    return nueva_funcion
+
+@mi_decorador
+def sumar(a, b):
+    return a + b
+
+print(sumar(5, 10))
+
+# Salida:
+# Llamada con argumentos: (5, 10) {}
+# 15
+
+```
+
+### Decoradores con parámetros
+
+Si deseas que el decorador acepte parámetros, puedes anidar funciones. En este caso, el decorador principal recibe los parámetros y devuelve un decorador.
+
+```py
+def repetidor(n):
+    def decorador(func):
+        def nueva_funcion(*args, **kwargs):
+            for _ in range(n):
+                resultado = func(*args, **kwargs)
+            return resultado
+        return nueva_funcion
+    return decorador
+
+@repetidor(3)
+def saludar():
+    print("Hola!")
+
+saludar()
+
+# Salida:
+
+# Hola
+# Hola
+# Hola
+
+```
+
+- **`repetidor(n)`**: Es un decorador que acepta un argumento (n).
+- **`decorador(func)`**: Es el decorador real que aplica el comportamiento.
+- `nueva_funcion(*args, **kwargs)`: Ejecuta la función original n veces.
+
+### Decoradores para métodos de clase
+
+Los decoradores también se pueden aplicar a métodos dentro de una clase. Además, Python tiene decoradores predefinidos como `@staticmethod` y `@classmethod`.
+
+```py
+def decorador_metodo(func):
+    def nueva_funcion(self, *args, **kwargs):
+        print(f"Llamando al método {func.__name__} de la clase {self.__class__.__name__}")
+        return func(self, *args, **kwargs)
+    return nueva_funcion
+
+class MiClase:
+    @decorador_metodo
+    def metodo(self):
+        print("Este es un método de instancia.")
+
+obj = MiClase()
+obj.metodo()
+
+# Salida:
+
+# Llamando al método metodo de la clase MiClase
+# Este es un método de instancia.
+
+```
+
+### Decoradores predefinidos en Python
+
+Python proporciona varios decoradores predefinidos que se usan comúnmente en clases:
+
+**`@staticmethod`**: Define un método estático que no recibe la instancia de la clase (self) como primer argumento.
+**`@classmethod`**: Define un método que recibe la clase (cls) como primer argumento en lugar de la instancia.
+**`@property`**: Define un método para que se comporte como un atributo, útil para encapsulamiento.
+
+```py
+class MiClase:
+    @staticmethod
+    def metodo_estatico():
+        print("Método estático")
+
+    @classmethod
+    def metodo_clase(cls):
+        print(f"Método de clase: {cls.__name__}")
+
+MiClase.metodo_estatico()
+MiClase.metodo_clase()
+
+# Salida:
+
+# Método estático
+# Método de clase: MiClase
+
+```
+
+### Uso avanzado: Decoradores anidados
+
+Es posible usar varios decoradores para una misma función, y estos se aplican en orden de arriba hacia abajo.
+
+```py
+def decorador1(func):
+    def nueva_funcion(*args, **kwargs):
+        print("Decorador 1")
+        return func(*args, **kwargs)
+    return nueva_funcion
+
+def decorador2(func):
+    def nueva_funcion(*args, **kwargs):
+        print("Decorador 2")
+        return func(*args, **kwargs)
+    return nueva_funcion
+
+@decorador1
+@decorador2
+def prueba():
+    print("Función original")
+
+prueba()
+
+# Salida:
+
+# Decorador 1
+# Decorador 2
+# Función original
+
+```
+
+El decorador más cercano a la función (decorador2) se aplica primero, seguido por decorador1.
