--- a/Ciencias de Computación/Documentación/7.RedesBasico.md
+++ b/Ciencias de Computación/Documentación/7.RedesBasico.md
@@ -69,6 +69,19 @@ El protocolo WebSocket utiliza el puerto **80** (para WebSockets sin cifrar) y e
 
 ---
 
+### ¿Qué es un Proxy?
+
+Un **proxy** es un servidor intermedio que actúa como puente entre el cliente y el servidor original. Su función principal es recibir solicitudes del cliente y reenviarlas al servidor de destino, actuando como intermediario. Existen varios tipos de proxies, entre ellos:
+
+1. **Proxy Directo**: El cliente se conecta al proxy, que luego se conecta al servidor de destino.
+2. **Proxy Reverso**: Aquí, el servidor se conecta al proxy, y el proxy se encarga de distribuir las solicitudes a varios servidores detrás de él.
+
+#### Ventajas de Usar un Proxy
+
+- **Seguridad**: Oculta la dirección IP del cliente, ofreciendo anonimato.
+- **Cacheo**: Almacena en caché los recursos solicitados, lo que mejora el rendimiento y reduce la carga en los servidores.
+- **Control**: Permite bloquear ciertos contenidos o filtrar el tráfico.
+
 ## Redes Locales (LAN) y Redes Amplias (WAN)
 
 Las redes se dividen en dos tipos principales según su alcance geográfico:
