Feat: Markdown docs

--- a/Backend/Go/Documentación/18.PatronesDiseñoGo.md
+++ b/Backend/Go/Documentación/18.PatronesDiseñoGo.md
@@ -245,6 +245,18 @@ En Golang, los patrones de diseño no se implementan exactamente de la misma man
 
   En Go, se puede implementar la arquitectura hexagonal dividiendo el código en capas y adaptadores, asegurando que la lógica de negocio sea independiente de la entrada y salida. Los adaptadores pueden manejar las interfaces externas (HTTP, bases de datos, etc.) mientras la lógica central permanece limpia y modular.
 
+- ### Clean Architecture
+
+  La Clean Architecture (Arquitectura Limpia) en Go (Golang) es un enfoque muy recomendado para construir aplicaciones escalables, mantenibles y desacopladas. se basa en la separación de responsabilidades, siguiendo principios como:
+
+  - Inversión de dependencias
+
+  - Independencia de frameworks
+
+  - Independencia de la UI
+
+  - Independencia de la base de datos
+
 ## 18.5. Estructura de carpetas en Go
 
 ```sql
