Feat: Clean code rules

--- a/Backend/Go/Documentación/17.Seguridad.md
+++ b/Backend/Go/Documentación/17.Seguridad.md
@@ -197,5 +197,63 @@ Proteger una aplicación implica tomar medidas contra ataques comunes que podrí
 
       r.Run()
   }
+  ```
+
+- ### CORS Cross-Origin Resource Sharing (CORS)
+
+  CORS (Cross-Origin Resource Sharing) es un mecanismo de seguridad que restringe cómo los navegadores permiten que una página web haga peticiones a un dominio distinto al que la sirvió.
+
+  - Por defecto, el navegador bloquea las peticiones entre orígenes diferentes (Cross-Origin).
+
+  - CORS define cabeceras HTTP para indicar qué orígenes están permitidos para acceder a ciertos recursos
+
+  ```go
+  package main
+
+    import (
+        "net/http"
+        "github.com/rs/cors"
+    )
+
+    func main() {
+        mux := http.NewServeMux()
+
+        mux.HandleFunc("/api", func(w http.ResponseWriter, r *http.Request) {
+            w.Write([]byte("Hello CORS!"))
+        })
+
+        // Configuración de CORS
+        c := cors.New(cors.Options{
+            AllowedOrigins:   []string{"https://example.com"}, // Orígenes permitidos
+            AllowedMethods:   []string{"GET", "POST", "OPTIONS"},
+            AllowedHeaders:   []string{"Authorization", "Content-Type"},
+            AllowCredentials: true,
+        })
+
+        handler := c.Handler(mux)
+        http.ListenAndServe(":8080", handler)
+    }
 
   ```
+
+- ### Open Web Application Security Project (OWASP)
+
+  OWASP (Open Web Application Security Project) es una comunidad que publica recursos, guías y estándares para mejorar la seguridad en aplicaciones web.
+
+  - El proyecto OWASP Top 10 lista las vulnerabilidades web más críticas.
+
+  - CORS mal configurado puede llevar a Cross-Site Request Forgery (CSRF) y otras vulnerabilidades listadas en OWASP.
+
+- ### Puntos importantes según OWASP para CORS
+
+  - No usar "\*" en AllowedOrigins si usas credenciales (cookies, headers de autenticación). Siempre lista explícitamente los orígenes confiables.
+
+  - Limita los métodos HTTP permitidos.
+
+  - Valida y limita los headers permitidos.
+
+  - Si usas cookies o tokens, configura AllowCredentials: true y nunca AllowedOrigins: ["*"].
+
+  - Usa HTTPS para proteger la comunicación.
+
+  - **Implementa otras capas de seguridad**: CSRF tokens, validación backend, autenticación robusta.
