Feat: DevOps, Api

--- a/Backend/Go/16.DesarrolloBackend.md
+++ b/Backend/Go/16.DesarrolloBackend.md
@@ -149,86 +149,69 @@ func procesarSolicitud(r *http.Request) {
 
 ---
 
-## 16.6. Microservicios
+## 16.6. Implementaciones de Microservicios en Go
 
-La arquitectura de microservicios divide una aplicación en servicios pequeños, independientes y desplegables de manera autónoma. Go es una excelente elección para construir microservicios debido a su eficiencia, soporte de concurrencia y facilidad para crear servicios de alto rendimiento.
+- **Frameworks y Herramientas para Microservicios en Go**
 
-- ### Ventajas de los Microservicios
+  - **Go Kit:** Un framework robusto para construir microservicios en Go, que ofrece soporte para transporte, middlewares, logging, circuit breakers, entre otros.
 
-  - **Escalabilidad:** Cada microservicio puede escalarse de forma independiente según la demanda.
-  - **Mantenibilidad:** Código más modular y fácil de mantener.
-  - **Despliegue Independiente**: Permite actualizaciones y despliegues sin afectar todo el sistema.
-  - **Tecnologías Heterogéneas:** Diferentes microservicios pueden estar escritos en distintos lenguajes o usar diferentes tecnologías.
+    ```go
+    import (
+    kitlog "github.com/go-kit/kit/log"
+    "github.com/go-kit/kit/endpoint"
+    "github.com/go-kit/kit/transport/http"
+    )
 
-- ### Diseño de Microservicios en Go
+    func main() {
+        logger := kitlog.NewLogfmtLogger(os.Stderr)
+        svc := MyService{}
 
-  - **Comunicación entre Microservicios**
+        endpoint := MakeMyEndpoint(svc)
+        handler := http.NewServer(
+            endpoint,
+            decodeRequest,
+            encodeResponse,
+        )
 
-    - **RESTful APIs:** Uso de HTTP para la comunicación entre servicios.
-    - **gRPC:** Comunicación eficiente basada en Protocol Buffers, ideal para servicios de alto rendimiento.
-    - **Mensajería Asíncrona:** Utilización de sistemas como NATS, RabbitMQ o Kafka para la comunicación basada en eventos.
+        http.Handle("/myservice", handler)
+        logger.Log("msg", "Servidor iniciado en :8080")
+        logger.Log("err", http.ListenAndServe(":8080", nil))
+    }
 
-  - **Frameworks y Herramientas para Microservicios en Go**
+    ```
 
-    - **Go Kit:** Un framework robusto para construir microservicios en Go, que ofrece soporte para transporte, middlewares, logging, circuit breakers, entre otros.
+  - **Micro:** Un ecosistema completo para desarrollar microservicios, que incluye gestión de servicios, balanceo de carga, descubrimiento de servicios y más.
 
-      ```go
-      import (
-      kitlog "github.com/go-kit/kit/log"
-      "github.com/go-kit/kit/endpoint"
-      "github.com/go-kit/kit/transport/http"
-      )
+    ```go
+    import (
+        "github.com/micro/go-micro/v2"
+        "github.com/micro/go-micro/v2/service/logger"
+    )
 
-      func main() {
-          logger := kitlog.NewLogfmtLogger(os.Stderr)
-          svc := MyService{}
+    func main() {
+        // Crear nuevo servicio
+        service := micro.NewService(
+            micro.Name("mi.microservicio"),
+            micro.Version("1.0.0"),
+        )
 
-          endpoint := MakeMyEndpoint(svc)
-          handler := http.NewServer(
-              endpoint,
-              decodeRequest,
-              encodeResponse,
-          )
+        // Inicializar el servicio
+        service.Init()
 
-          http.Handle("/myservice", handler)
-          logger.Log("msg", "Servidor iniciado en :8080")
-          logger.Log("err", http.ListenAndServe(":8080", nil))
-      }
+        // Registrar el handler
+        if err := RegisterMiServicioHandler(service.Server(), newHandler()); err != nil {
+            logger.Fatal(err)
+        }
 
-      ```
+        // Ejecutar el servicio
+        if err := service.Run(); err != nil {
+            logger.Fatal(err)
+        }
+    }
 
-    - **Micro:** Un ecosistema completo para desarrollar microservicios, que incluye gestión de servicios, balanceo de carga, descubrimiento de servicios y más.
+    ```
 
-      ```go
-      import (
-          "github.com/micro/go-micro/v2"
-          "github.com/micro/go-micro/v2/service/logger"
-      )
-
-      func main() {
-          // Crear nuevo servicio
-          service := micro.NewService(
-              micro.Name("mi.microservicio"),
-              micro.Version("1.0.0"),
-          )
-
-          // Inicializar el servicio
-          service.Init()
-
-          // Registrar el handler
-          if err := RegisterMiServicioHandler(service.Server(), newHandler()); err != nil {
-              logger.Fatal(err)
-          }
-
-          // Ejecutar el servicio
-          if err := service.Run(); err != nil {
-              logger.Fatal(err)
-          }
-      }
-
-      ```
-
-    - **Fiber:** Aunque principalmente es un framework web, Fiber puede ser utilizado para construir microservicios ligeros y de alto rendimiento.
+  - **Fiber:** Aunque principalmente es un framework web, Fiber puede ser utilizado para construir microservicios ligeros y de alto rendimiento.
 
 - **Gestión de Configuración y Descubrimiento de Servicios**
 
@@ -383,58 +366,3 @@ La arquitectura de microservicios divide una aplicación en servicios pequeños,
     ```
 
 ---
-
-- ### Despliegue y Orquestación
-
-  Para gestionar y desplegar microservicios en producción, es común utilizar herramientas de orquestación como Kubernetes. Kubernetes facilita la gestión de contenedores, el balanceo de carga, el escalado automático y la resiliencia de los servicios.
-
-  - **Definición de un Deployment (user-deployment.yaml):**
-
-    ```yaml
-    apiVersion: apps/v1
-    kind: Deployment
-    metadata:
-    name: user-service
-    spec:
-    replicas: 3
-    selector:
-        matchLabels:
-        app: user-service
-    template:
-        metadata:
-        labels:
-            app: user-service
-        spec:
-        containers:
-            - name: user-service
-            image: tu_usuario/user-service:latest
-            ports:
-                - containerPort: 50051
-
-    ```
-
-    - Definición de un Service (user-service.yaml):
-
-      ```yaml
-      apiVersion: v1
-      kind: Service
-      metadata:
-      name: user-service
-      spec:
-      selector:
-          app: user-service
-      ports:
-          - protocol: TCP
-          port: 50051
-          targetPort: 50051
-      type: ClusterIP
-
-      ```
-
-    - Comandos para aplicar la configuración:
-
-      ```sh
-      kubectl apply -f user-deployment.yaml
-      kubectl apply -f user-service.yaml
-
-      ```
